[gd_scene load_steps=11 format=2]

[ext_resource path="res://Entities/Player/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Art/Sprites/Comet_Green-Sheet.png" type="Texture2D" id=2]
[ext_resource path="res://Art/Sprites/Comet_Green_Perp-Sheet.png" type="Texture2D" id=3]
[ext_resource path="res://Art/Sprites/Comet_Green-Shee_perp_topdownt.png" type="Texture2D" id=4]

[sub_resource type="CapsuleShape3D" id=1]
radius = 0.4
height = 0.8

[sub_resource type="CapsuleShape3D" id=4]
radius = 0.6
height = 1.2

[sub_resource type="CylinderShape3D" id=5]
height = 0.001
radius = 4.0

[sub_resource type="Animation" id=6]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.25, 0.5, 0.75 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.3, 0.5, 0.75 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.25, 0.5, 0.75 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Bullet" type="RigidBody3D"]
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource( 1 )

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 10

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource( 4 )

[node name="Target_Detection" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Target_Detection"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00784367, 0.120528, -4.14521 )
shape = SubResource( 5 )

[node name="GreenAngled" type="Sprite3D" parent="."]
transform = Transform3D( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )
visible = false
billboard = 1
texture = ExtResource( 2 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="GreenAngled"]
"anims/New Anim" = SubResource( 6 )

[node name="GreenPerp" type="Sprite3D" parent="."]
transform = Transform3D( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )
visible = false
billboard = 1
texture = ExtResource( 3 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="GreenPerp"]
"anims/New Anim" = SubResource( 7 )

[node name="GreenPerpTopDown" type="Sprite3D" parent="."]
transform = Transform3D( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )
visible = false
billboard = 1
texture = ExtResource( 4 )
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="GreenPerpTopDown"]
"anims/New Anim" = SubResource( 8 )

[connection signal="body_entered" from="Area3D" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Target_Detection" to="." method="_on_Target_Detection_body_entered"]
